--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "4.8.1",
     "gh-pages": "1.1.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "react": "16.1.1",
+    "react-dom": "16.1.1",
     "react-scripts": "1.0.17"
   },
   "scripts": {
